Start visualization and modify gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,12 @@ Jupyter Exercises/Pandas/movielens/movies.csv
 Jupyter Exercises/Pandas/movielens/ratings.csv
 Jupyter Exercises/Pandas/movielens/README.txt
 Jupyter Exercises/Pandas/movielens/tags.csv
+Jupyter Exercises/Visualization/wdi/.DS_Store
+Jupyter Exercises/Visualization/wdi/Country.csv
+Jupyter Exercises/Visualization/wdi/CountryNotes.csv
+Jupyter Exercises/Visualization/wdi/database.sqlite
+Jupyter Exercises/Visualization/wdi/Footnotes.csv
+Jupyter Exercises/Visualization/wdi/hashes.txt
+Jupyter Exercises/Visualization/wdi/Indicators.csv
+Jupyter Exercises/Visualization/wdi/Series.csv
+Jupyter Exercises/Visualization/wdi/SeriesNotes.csv
