Finished 1st regression model using football db.

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ Jupyter Exercises/Visualization/wdi/hashes.txt
 Jupyter Exercises/Visualization/wdi/Indicators.csv
 Jupyter Exercises/Visualization/wdi/Series.csv
 Jupyter Exercises/Visualization/wdi/SeriesNotes.csv
+Jupyter Exercises/Linear Regression/european_soccer/database.sqlite
