--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,5 @@ Jupyter Exercises/Visualization/wdi/Indicators.csv
 Jupyter Exercises/Visualization/wdi/Series.csv
 Jupyter Exercises/Visualization/wdi/SeriesNotes.csv
 Jupyter Exercises/Linear Regression/european_soccer/database.sqlite
+Jupyter Exercises/Classification/meteo/diario.csv
+Jupyter Exercises/Classification/meteo/minuto.csv
