--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,5 @@ Jupyter Exercises/Visualization/wdi/SeriesNotes.csv
 Jupyter Exercises/Linear Regression/european_soccer/database.sqlite
 Jupyter Exercises/Classification/meteo/diario.csv
 Jupyter Exercises/Classification/meteo/minuto.csv
+Jupyter Exercises/Aggregation/meteo/diario.csv
+Jupyter Exercises/Aggregation/meteo/minuto.csv
