--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,10 @@ Jupyter Exercises/Aggregation/meteo/diario.csv
 Jupyter Exercises/Aggregation/meteo/minuto.csv
 *.jpeg
 Jupyter Exercises/X-Ray Classifier/chest_xray/train/NORMAL/.DS_Store
+Jupyter Exercises/X-Ray Classifier/chest_xray/train/.DS_Store
+Jupyter Exercises/X-Ray Classifier/chest_xray/test/.DS_Store
+Jupyter Exercises/X-Ray Classifier/chest_xray/.DS_Store
+Jupyter Exercises/X-Ray Classifier/chest_xray/train/PNEUMONIA/.DS_Store
+Jupyter Exercises/X-Ray Classifier/chest_xray/val/.DS_Store
+Jupyter Exercises/X-Ray Classifier/chest_xray/val/NORMAL/.DS_Store
+Jupyter Exercises/X-Ray Classifier/chest_xray/val/PNEUMONIA/.DS_Store
